tests/snapshots/bat_tmtheme_snapshots__bat_tmtheme@catppuccin-frappe.snap
---
source: tests/bat_tmtheme_snapshots.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN"
  "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
<plist version="1.0">
<dict>
    <key>name</key>
    <string>slate-catppuccin-frappe</string>
    <key>settings</key>
    <array>
        <dict>
            <key>settings</key>
            <dict>
                <key>background</key>
                <string>#303446</string>
                <key>foreground</key>
                <string>#c6d0f5</string>
                <key>caret</key>
                <string>#f2d5cf</string>
                <key>selection</key>
                <string>#626880</string>
                <key>lineHighlight</key>
                <string>#2c2839</string>
                <key>invisibles</key>
                <string>#626880</string>
                <key>gutter</key>
                <string>#34323e</string>
                <key>gutterForeground</key>
                <string>#626880</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Comment</string>
            <key>scope</key>
            <string>comment, punctuation.definition.comment</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#626880</string>
                <key>fontStyle</key>
                <string>italic</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>String</string>
            <key>scope</key>
            <string>string, constant.other.symbol</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#a6d189</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Keyword</string>
            <key>scope</key>
            <string>keyword, storage.type, storage.modifier</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#f4b8e4</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Constant</string>
            <key>scope</key>
            <string>constant, constant.numeric</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#e5c890</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Function</string>
            <key>scope</key>
            <string>entity.name.function, support.function</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#8caaee</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Type</string>
            <key>scope</key>
            <string>entity.name.type, entity.name.class, support.class</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#81c8be</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Variable</string>
            <key>scope</key>
            <string>variable, variable.parameter</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#c6d0f5</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Operator</string>
            <key>scope</key>
            <string>keyword.operator</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#c6d0f5</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Tag</string>
            <key>scope</key>
            <string>entity.name.tag</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#f4b8e4</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Attribute</string>
            <key>scope</key>
            <string>entity.other.attribute-name</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#e5c890</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Inserted</string>
            <key>scope</key>
            <string>markup.inserted</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#a6d189</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Deleted</string>
            <key>scope</key>
            <string>markup.deleted</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#e78284</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Changed</string>
            <key>scope</key>
            <string>markup.changed</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#e5c890</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Heading</string>
            <key>scope</key>
            <string>markup.heading</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#8caaee</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Bold</string>
            <key>scope</key>
            <string>markup.bold</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#f4b8e4</string>
                <key>fontStyle</key>
                <string>bold</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Markup Italic</string>
            <key>scope</key>
            <string>markup.italic</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#f4b8e4</string>
                <key>fontStyle</key>
                <string>italic</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Regular Expression</string>
            <key>scope</key>
            <string>string.regexp</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#e5c890</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Escape Sequence</string>
            <key>scope</key>
            <string>constant.character.escape</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#81c8be</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Invalid</string>
            <key>scope</key>
            <string>invalid.illegal</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#303446</string>
                <key>background</key>
                <string>#e78284</string>
            </dict>
        </dict>
        <dict>
            <key>name</key>
            <string>Diff Meta</string>
            <key>scope</key>
            <string>meta.diff, meta.diff.header</string>
            <key>settings</key>
            <dict>
                <key>foreground</key>
                <string>#8caaee</string>
            </dict>
        </dict>
    </array>
    <key>uuid</key>
    <string>d45e6d87-f19d-5b46-a856-17cd9af48356</string>
</dict>
</plist>
